--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ add_library(imgui_lib
     ${imgui_SOURCE_DIR}/imgui_widgets.cpp
     ${imgui_SOURCE_DIR}/backends/imgui_impl_glfw.cpp
     ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
- "src/tests/Test.hpp" "src/tests/TestClearColor.hpp" "src/tests/TestClearColor.cpp")
+)
 target_include_directories(imgui_lib PUBLIC
     ${imgui_SOURCE_DIR}
     ${imgui_SOURCE_DIR}/backends
@@ -55,7 +55,7 @@ target_include_directories(imgui_lib PUBLIC
 target_link_libraries(imgui_lib PUBLIC glfw glad)
 
 # Src
-add_executable(JV8 "src/main.cpp" "src/debug/callback.cpp" "src/core/VertexBuffer.cpp" "src/core/IndexBuffer.cpp" "src/core/VertexArray.cpp" "src/core/Shader.cpp" "src/core/Renderer.cpp" "src/vendor/std_image/std_image.cpp" "src/core/Texture.cpp" "src/tests/Test.cpp" "src/tests/TestClearColor.cpp" "src/tests/TestTexture2D.cpp")
+add_executable(JV8 "src/main.cpp" "src/debug/callback.cpp" "src/core/VertexBuffer.cpp" "src/core/IndexBuffer.cpp" "src/core/VertexArray.cpp" "src/core/Shader.cpp" "src/core/Renderer.cpp" "src/vendor/std_image/std_image.cpp" "src/core/Texture.cpp" "src/tests/Test.cpp" "src/tests/TestClearColor.cpp" "src/tests/TestTexture2D.cpp" "src/tests/Test3D.cpp" "src/graphics/Camera.cpp")
 
 # Link
 target_include_directories(JV8 PRIVATE ${OPENGL_INCLUDE_DIR} external/glad/include)
